--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -4,11 +4,11 @@
 	<link rel="stylesheet" href="../css/style.css">
 
 <meta charset="utf-8">
-<title>Madar.com - Madar's Calculator</title>
+<title>Sowjanya.com - Sowjanya's Calculator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Kennashka's Calculator">
-<meta name="author" content="Madar Saheb">
-<meta name="Keywords" content="Madar calculator, Madar calculator,
+<meta name="author" content="Sowjanya">
+<meta name="Keywords" content="Sowjanya calculator, Sowjanya calculator,
  free calculator, calculator app, calculator">
 
  <!-- Bootstrap -->
@@ -137,7 +137,7 @@
 
 	</div> <!--row-->
 <div class="text-center p-1">
-	<font><a href="/"> Developed by Madar Saheb </a> </font>
+	<font><a href="/"> Developed by Sowjanya </a> </font>
 </div>
 		
 
