--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ input[type=text]{
 }
 
 body{
-	background-image: url("../img/math.jpg");
+	background-image: url("../img/Calculator-Backgrounds.jpg");
 	background-size: cover;
 	background-attachment: fixed;
 }
